--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "cors": "^2.8.5",
     "nodemon": "^2.0.22",
     "typescript": "^5.0.4"
   },
   "dependencies": {
+    "@prisma/client": "^4.13.0",
     "express": "^4.18.2",
-    "mongoose": "^7.0.4"
+    "mongoose": "^7.0.4",
+    "pg": "^8.10.0"
   }
 }
